--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,14 @@
     <artifactId>extentreports</artifactId>
     <version>5.1.1</version>
 </dependency>
-		
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.11.0</version> <!-- Use the latest version available -->
+</dependency>
+
+
+	
 
 		<dependency>
 			<groupId>org.json</groupId>
